@@ -26,6 +26,8 @@ INCOMPATIBLE CHANGES
 
 IMPROVEMENTS
 
+PIG-1009: FINDBUGS: OS_OPEN_STREAM: Method may fail to close stream (olgan)
+
 PIG-1008: FINDBUGS: NP_TOSTRING_COULD_RETURN_NULL (olgan)
 
 PIG-1018: FINDBUGS: NM_FIELD_NAMING_CONVENTION: Field names should start with
